--- a/index.html
+++ b/index.html
@@ -137,8 +137,12 @@
        <!-- End Produk -->
 
         <!-- Profile -->
+     <h1 class="container my-5">Profile</h1>
+        <div class="container text-center">
 <h3 class="text-center mb-3" id="profile">Profile</h3>
-
+ <div class="row">
+          <div class="col">
+            <div class="card mx-auto" style="width: 18rem;">
 <div class="container">
       <div id="cardCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
