--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#produk">Produk</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#profil team">Profil Team</a>
+                <a class="nav-link" href="#profile">Profil Team</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#kontak">Kontak</a>
