--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#produk">Produk</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#profile">Profil Team</a>
+                <a class="nav-link" href="#profile">Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#kontak">Kontak</a>
@@ -137,12 +137,8 @@
        <!-- End Produk -->
 
         <!-- Profile -->
-     <h1 class="container my-5">Profile</h1>
-        <div class="container text-center">
 <h3 class="text-center mb-3" id="profile">Profile</h3>
- <div class="row">
-          <div class="col">
-            <div class="card mx-auto" style="width: 18rem;">
+
 <div class="container">
       <div id="cardCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
